--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -2106,6 +2106,15 @@ input.search-control-2::placeholder {
 	margin-left: 1rem;
 }
 
+.user-img-avatar {
+	width: 52px;
+	height: 52px;
+	border-radius: 50%;
+	border: 0 solid #e5e5e5;
+	padding: 0;
+	margin-left: 1rem;
+}
+
 .user-info .user-name {
 	font-size: 15px;
 	font-weight: 500;
